# gromacs

./: .black.toml  .clang-format  .cvsignore  .dockerignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  COPYING  COPYING-GPU  COPYING-OTHER  COPYING.derived  COPYING.readme  CPackInit.cmake  CTestConfig.cmake  Doxyfile-common.cmakein  Doxyfile-lib.cmakein  Doxyfile-user.cmakein  Doxyfile.cmakein  Doxyfile.in  GMXRC.WIN  GromacsManualText.tex  INSTALL  INSTALL-GPU  INSTALL-dev  INSTALL-unofficial  INSTALL.automake  INSTALL.cmake  LICENSE  Makefile  Makefile.am  Makefile.in  NOGMX  README  (+82 more)
api/: CMakeLists.txt  gmxapi.cmake
api/docs/: CMakeLists.txt  Doxyfile-dev.in  Doxyfile-gmxapi0-dev.cmakein  Doxyfile.cmakein  Doxyfile.default  Doxyfile.in
api/gmxapi/: CMakeLists.txt
api/legacy/: CMakeLists.txt  version.h.cmakein
api/nblib/: CMakeLists.txt  basicdefinitions.h  box.cpp  box.h  exception.h  forcecalculator.cpp  forcecalculator.h  gmxbackenddata.h  gmxcalculator.cpp  gmxcalculator.h  gmxcalculatorcpu.cpp  gmxcalculatorcpu.h  gmxcalculatorgpu.cpp  gmxsetup.cpp  gmxsetup.h  integrator.cpp  integrator.h  integrator_gpu.cpp  integrator_gpu_internal.cu  integrator_gpu_internal.h  interactions.cpp  interactions.h  kerneloptions.h  molecules.cpp  molecules.h  nblib.h  nbnxmsetuphelpers.cpp  nbnxmsetuphelpers.h  particlesequencer.cpp  particlesequencer.h  particletype.cpp  particletype.h  pbc.hpp  ppmap.h  sequencing.hpp  simulationstate.cpp  simulationstate.h  simulationstateimpl.h  systemdescription.h  topology.cpp  (+8 more)
cmake/AdaptiveCppTest/: CMakeLists.txt  main.cpp
cmake/HipSyclTest/: CMakeLists.txt  main.cpp
contrib/: .gitignore  CMakeLists.txt
docs/: .gitattributes  BuildInstallGuide.cmake  CMakeLists.txt  OpenCLTODOList.txt  PdfFileList.cmake  PngFileList.cmake  SphinxMacros.cmake  buttondown.css  conf-vars.py.cmakein  conf.cmakein.py  conf.py  configure-html.cmake.in  configure-markdown.cmake.in  configure-sphinx.cmake.in  docs.dockerfile  download.rst  gmxTestImageMagick.cmake  gmxcitations.py  gmxsphinx.py  gmxstyles.py  index.md  index.rst  install-guide.md  linkcheckerrc  online.rst  requirements.txt  texindex.rst
docs/api/: gmxlibs.rst  index.rst
docs/dev-manual/: build-system.rst  change-management.rst  code-formatting.rst  codelayout.rst  commitstyle.rst  containers.rst  contribute.rst  dev-manual.md  documentation-generation.rst  doxygen-links.rst  doxygen.rst  error-handling.rst  formatting.md  formatting.rst  gitlab-ci.rst  gitlab.rst  gmxapi.rst  gmxtree.md  gmxtree.rst  includestyle.md  includestyle.rst  index.rst  infrastructure.rst  jenkins.rst  known-issues.rst  language-features.rst  library-structure.rst  naming.md  naming.rst  overview.rst  physical_validation.rst  relocatable-binaries.rst  reportstyle.rst  style.md  style.rst  testutils.rst  tools.md  tools.rst  uncrustify.md  uncrustify.rst
docs/doxygen/: CMakeLists.txt  Doxyfile-common.cmakein  Doxyfile-compact  Doxyfile-dev.cmakein  Doxyfile-full.cmakein  Doxyfile-user.cmakein  Doxyfile-version.cmakein  Doxyfile-xml.cmakein  DoxygenLayout.xml  misc.cpp  (+18 more)
doxygen/: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile-common.cmakein  Doxyfile-compact  Doxyfile-full.cmakein  Doxyfile-lib.cmakein  Doxyfile-user.cmakein  Doxyfile-xml.cmakein  DoxygenLayout.xml  RunDoxygen.cmake.cmakein  analysisdata.md  analysisframework.md  analysistemplate.md  codelayout.md  cycle-suppressions.txt  directories.cpp  doxygen-check.py  doxygen.md  doxygengmx.py  doxygenxml.py  generateGraphs.cmake  getInstalledHeaders.cmake  gmxtree.py  graphbuilder.py  includesorter.py  index.html  mainpage.md  misc.cpp  reporter.py  selections.md  simd.md  suppressions.txt  unittesting.md  usinglibrary.md  wrapperbinary.md
include/: .cvsignore  3dview.h  CMakeLists.txt  DLLdefines.h  Makefile  Makefile.am  Makefile.in  TOMS_transpose.h  ambadma.h  ambio.h  assert.h  atomprop.h  axp_asm.h  binio.h  block_tx.h  bondf.h  buffer.h  calcgrid.h  calch.h  calcmu.h  callf77.h  centerofmass.h  chargegroup.h  checkpoint.h  cm5io.h  com.h  comlib.h  complex.h  comtest.h  config.h  config.h.in  confio.h  congrad.h  constr.h  copyrite.h  coulomb.h  cuda_data_mgmt.h  cupmalloc.h  cutypedefs.h  cutypedefs_ext.h  (+292 more)
install-guide/: CMakeLists.txt  configure-install-guide.cmake.in  install-guide.md
man/: CMakeLists.txt  Makefile.am  editconf.1  g_analyze.1  g_bundle.1  g_chi.1  g_confrms.1  g_dielectric.1  g_dih.1  g_dipoles.1  g_disre.1  g_dist.1  g_enemat.1  g_gyrate.1  g_helix.1  g_lie.1  g_morph.1  g_msd.1  g_nmeig.1  g_order.1  g_potential.1  g_rmsf.1  g_saltbr.1  g_sas.1  g_sgangle.1  g_sorient.1  g_traj.1  g_velacc.1  genconf.1  genpr.1  grompp.1  highway.1  make_ndx.1  ngmx.1  nmrun.1  protonate.1  tpbconv.1  trjorder.1  wheel.1  x2top.1  (+1 more)
python_packaging/: .dockerignore  CMakeLists.txt  README.md  naming.rst  requirements-docs.txt  requirements-test.txt  roadmap.rst
scripts/: .cvsignore  .gitignore  CMakeLists.txt  CTest2JUnit.xsl  GMXRC.bash.cmakein  GMXRC.bash.in  GMXRC.cmakein  GMXRC.csh.cmakein  GMXRC.csh.in  GMXRC.in  GMXRC.zsh.cmakein  GMXRC.zsh.in  Makefile.am  amber2gmxff  checkheaders.sh  completion.bash  completion.csh  completion.zsh  demux.pl  g_angle.bat  g_bond  g_bundle.bat  g_chi.bat  g_cluster  g_clustsize.bat  g_confrms  g_covar  g_density  g_density.bat  g_dielectric.bat  g_dipoles  g_disre  g_disre.bat  g_dist  g_dyndom  g_dyndom.bat  g_filter  g_hbond.bat  g_helix  g_helix.bat  (+29 more)
share/: CMakeLists.txt  Makefile.am  README.tutor  README_FreeEnergyModifications.txt
src/: .clang-tidy  .clang-tidy.new.code  .cvsignore  .gitignore  CMakeLists.txt  GetCompilerInfo.cmake  Makefile  Makefile.am  Makefile.in  Makefile.inc  buildinfo.h.cmakein  compilerflaginfo.h.cmakein  config.h.cmakein  config.h.in  config.win  contributors.h.cmakein  dispatch.cc  gmx_arpack.h  gmx_blas.h  gmx_lapack.h  gmxmpi.h  gmxpre-config.h.cmakein  gmxpre.h  mkcompl  mkhtml  mknroff
tests/: .gitignore  CMakeLists.txt  CheckTarget.cmake  CppCheck.cmake
(+26143 files in other folders)
